--- a/an_vpc_prov.yml
+++ b/an_vpc_prov.yml
@@ -4,11 +4,13 @@
 
   vars:
     STATE_RES_NAME: "ami_info"
+    VPC_CIDR_BLOCK: "${VPC_CIDR_BLOCK}"
+    VPC_NAME: "${VPC_NAME}"
   tasks:
 
     - name: run cmd
       shell: |
-        shipctl post_resource_state "{{ STATE_RES_NAME }}" versionName "build-{{ BUILD_NUMBER }}"
+        shipctl post_resource_state "{{ STATE_RES_NAME }}" versionName "build-${BUILD_NUMBER}"
 
     - name: Create VPC {{ VPC_NAME }}
       ec2_vpc_net:
@@ -20,5 +22,5 @@
 
     - name: run cmd
       shell: |
-        shipctl post_resource_state "{{ STATE_RES_NAME }}" versionName "build-{{ BUILD_NUMBER }}"
+        shipctl post_resource_state "{{ STATE_RES_NAME }}" versionName "build-${BUILD_NUMBER}"
         shipctl put_resource_state "{{ STATE_RES_NAME }}" VPC_ID "{{ vpc.vpc.id }}"
