--- a/shippable.jobs.yml
+++ b/shippable.jobs.yml
@@ -23,89 +23,24 @@ jobs:
       - OUT: ami_info
 
 
-#
-## PROV AMI VPC Public RT with Ansible
-#  - name: prov_ami_vpc_rt
-#    type: runSh
-#    steps:
-#      - IN: aws_region
-#      - IN: ami_state_res_name
-#        switch: off
-#      - IN: ami_infra_state
-#      - IN: prov_ami_vpc_igw
-#      - IN: aws_creds
-#        switch: off
-#      - IN: ans_sec_ops
-#        switch: off
-#      - TASK:
-#        - script: |
-#            export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
-#            export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
-#            cd $(shipctl get_resource_state ans_sec_ops)
-#            pushd $(shipctl get_resource_meta ami_infra_state)
-#            export VPC_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_ID)
-#            export VPC_SUBNET_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_SUBNET_ID)
-#            export VPC_IGW_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_IGW_ID)
-#            popd
-#            shipctl replace an_vpc_rt_prov.yml
-#            ansible-playbook -v an_vpc_rt_prov.yml
-#      - OUT: ami_infra_state
-#
-## PROV AMI VPC Public RT with Ansible
-#  - name: prov_ami_vpc_sg_group
-#    type: runSh
-#    steps:
-#      - IN: aws_region
-#      - IN: ami_state_res_name
-#        switch: off
-#      - IN: ami_infra_state
-#      - IN: prov_ami_vpc_rt
-#      - IN: aws_creds
-#        switch: off
-#      - IN: ans_sec_ops
-#        switch: off
-#      - TASK:
-#        - script: |
-#            export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
-#            export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
-#            cd $(shipctl get_resource_state ans_sec_ops)
-#            pushd $(shipctl get_resource_meta ami_infra_state)
-#            export VPC_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_ID)
-#            export VPC_SUBNET_CIDR_BLOCK=$(cat version.json | jq -r '.'version.propertyBag.VPC_SUBNET_CIDR_BLOCK)
-#            popd
-#            shipctl replace an_vpc_sg_group_prov.yml
-#            ansible-playbook -v an_vpc_sg_group_prov.yml
-#      - OUT: ami_infra_state
-#
-## DEPROV AMI with Ansible
-#  - name: deprov_ami_vpc
-#    type: runSh
-#    steps:
-#      - IN: aws_region
-#      - IN: ami_state_res_name
-#        switch: off
-#      - IN: ami_infra_state
-#      - IN: ami_vpc_subnet_conf
-#        switch: off
-#      - IN: ami_vpc_conf
-#        switch: off
-#      - IN: aws_creds
-#        switch: off
-#      - IN: ans_sec_ops
-#        switch: off
-#      - TASK:
-#        - script: |
-#            export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
-#            export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
-#            cd $(shipctl get_resource_state ans_sec_ops)
-#            pushd $(shipctl get_resource_meta ami_infra_state)
-#            export VPC_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_ID)
-#            export VPC_SUBNET_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_SUBNET_ID)
-#            export VPC_IGW_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_IGW_ID)
-#            popd
-#            shipctl replace an_vpc_deprov.yml
-#            ansible-playbook -v an_vpc_deprov.yml
-#      - OUT: ami_infra_state
+# DEPROV AMI with Ansible
+  - name: deprov_ami_vpc
+    type: runSh
+    steps:
+      - IN: ami_conf
+      - IN: ami_info
+      - IN: aws_creds
+        switch: off
+      - IN: ans_sec_ops
+        switch: off
+      - TASK:
+        - script: |
+            export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
+            export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
+            cd $(shipctl get_resource_state ans_sec_ops)
+            shipctl replace an_vpc_deprov.yml
+            ansible-playbook -v an_vpc_deprov.yml
+
 #
 ## CREATE AWS AMI used to deploy ECS VMs with PACKER
 #  - name: build_ecs_ami
@@ -194,59 +129,7 @@ jobs:
 #
 #
 
-## PROV Test VPC Public RT with Ansible
-#  - name: prov_test_vpc_rt
-#    type: runSh
-#    steps:
-#      - IN: aws_region
-#      - IN: test_state_res_name
-#        switch: off
-#      - IN: test_infra_state
-#      - IN: prov_test_vpc_igw
-#      - IN: aws_creds
-#        switch: off
-#      - IN: ans_sec_ops
-#        switch: off
-#      - TASK:
-#        - script: |
-#            export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
-#            export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
-#            cd $(shipctl get_resource_state ans_sec_ops)
-#            pushd $(shipctl get_resource_meta test_infra_state)
-#            export VPC_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_ID)
-#            export VPC_SUBNET_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_SUBNET_ID)
-#            export VPC_IGW_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_IGW_ID)
-#            popd
-#            shipctl replace an_vpc_rt_prov.yml
-#            ansible-playbook -v an_vpc_rt_prov.yml
-#      - OUT: test_infra_state
-#
-## PROV Test VPC Public RT with Ansible
-#  - name: prov_test_vpc_sg_group
-#    type: runSh
-#    steps:
-#      - IN: aws_region
-#      - IN: test_state_res_name
-#        switch: off
-#      - IN: test_infra_state
-#      - IN: prov_test_vpc_rt
-#      - IN: aws_creds
-#        switch: off
-#      - IN: ans_sec_ops
-#        switch: off
-#      - TASK:
-#        - script: |
-#            export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
-#            export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
-#            cd $(shipctl get_resource_state ans_sec_ops)
-#            pushd $(shipctl get_resource_meta test_infra_state)
-#            export VPC_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_ID)
-#            export VPC_SUBNET_CIDR_BLOCK=$(cat version.json | jq -r '.'version.propertyBag.VPC_SUBNET_CIDR_BLOCK)
-#            popd
-#            shipctl replace an_vpc_sg_group_prov.yml
-#            ansible-playbook -v an_vpc_sg_group_prov.yml
-#      - OUT: test_infra_state
-#
+
 ## PROV Test ECS Cluster with Ansible
 #  - name: prov_test_ecs
 #    type: runSh
@@ -447,60 +330,7 @@ jobs:
 #            ansible-playbook -v an_vpc_prov.yml
 #      - OUT: prod_infra_state
 #
-
 #
-## PROV Prod VPC Public RT with Ansible
-#  - name: prov_prod_vpc_rt
-#    type: runSh
-#    steps:
-#      - IN: aws_region
-#      - IN: prod_state_res_name
-#        switch: off
-#      - IN: prod_infra_state
-#      - IN: prov_prod_vpc_igw
-#      - IN: aws_creds
-#        switch: off
-#      - IN: ans_sec_ops
-#        switch: off
-#      - TASK:
-#        - script: |
-#            export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
-#            export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
-#            cd $(shipctl get_resource_state ans_sec_ops)
-#            pushd $(shipctl get_resource_meta prod_infra_state)
-#            export VPC_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_ID)
-#            export VPC_SUBNET_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_SUBNET_ID)
-#            export VPC_IGW_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_IGW_ID)
-#            popd
-#            shipctl replace an_vpc_rt_prov.yml
-#            ansible-playbook -v an_vpc_rt_prov.yml
-#      - OUT: prod_infra_state
-#
-## PROV Prod VPC Public SG with Ansible
-#  - name: prov_prod_vpc_sg_group
-#    type: runSh
-#    steps:
-#      - IN: aws_region
-#      - IN: prod_state_res_name
-#        switch: off
-#      - IN: prod_infra_state
-#      - IN: prov_prod_vpc_rt
-#      - IN: aws_creds
-#        switch: off
-#      - IN: ans_sec_ops
-#        switch: off
-#      - TASK:
-#        - script: |
-#            export AWS_ACCESS_KEY_ID=$(shipctl get_integration_resource_field aws_creds aws_access_key_id)
-#            export AWS_SECRET_ACCESS_KEY=$(shipctl get_integration_resource_field aws_creds aws_secret_access_key)
-#            cd $(shipctl get_resource_state ans_sec_ops)
-#            pushd $(shipctl get_resource_meta prod_infra_state)
-#            export VPC_ID=$(cat version.json | jq -r '.'version.propertyBag.VPC_ID)
-#            export VPC_SUBNET_CIDR_BLOCK=$(cat version.json | jq -r '.'version.propertyBag.VPC_SUBNET_CIDR_BLOCK)
-#            popd
-#            shipctl replace an_vpc_sg_group_prov.yml
-#            ansible-playbook -v an_vpc_sg_group_prov.yml
-#      - OUT: prod_infra_state
 #
 ## PROV Prod ECS Cluster with Ansible
 #  - name: prov_prod_ecs
