--- a/an_vpc_prov.yml
+++ b/an_vpc_prov.yml
@@ -9,7 +9,6 @@
     VPC_SUBNET_CIDR_BLOCK: "${VPC_SUBNET_CIDR_BLOCK}"
     VPC_SUBNET_NAME: "${VPC_SUBNET_NAME}"
   tasks:
-
     - name: run cmd
       shell: |
         shipctl post_resource_state "{{ STATE_RES_NAME }}" versionName "build-${BUILD_NUMBER}"
@@ -47,3 +46,46 @@
       shell: |
         shipctl put_resource_state "{{ STATE_RES_NAME }}" VPC_IGW_ID "{{ igw.gateway_id }}"
 
+    - name: Set up public subnet route table
+      ec2_vpc_route_table:
+        vpc_id: "{{ vpc.vpc.id }}"
+        tags:
+          Name: Public
+        subnets:
+          - "{{ publicSN.subnet.id }}"
+        routes:
+          - dest: 0.0.0.0/0
+            gateway_id: "{{ igw.gateway_id }}"
+      register: publicRT
+
+    - name: run cmd
+      shell: |
+        shipctl put_resource_state "{{ STATE_RES_NAME }}" VPC_RT_ID "{{ publicRT.route_table.id }}"
+
+    - name: Create Public SG group
+      ec2_group:
+        name: publicSG
+        description: Public access Security Group
+        vpc_id: "{{ vpc.vpc.id }}"
+        rules:
+          - proto: tcp
+            from_port: 80
+            to_port: 80
+            cidr_ip: 0.0.0.0/0
+          - proto: tcp
+            from_port: 22
+            to_port: 22
+            cidr_ip: 0.0.0.0/0
+          - proto: tcp
+            from_port: 8080
+            to_port: 8080
+            cidr_ip: 0.0.0.0/0
+          - proto: tcp
+            from_port: 0
+            to_port: 65535
+            cidr_ip: "{{ VPC_SUBNET_CIDR_BLOCK }}"
+      register: publicSG
+
+    - name: run cmd
+      shell: |
+        shipctl put_resource_state "{{ STATE_RES_NAME }}" VPC_SG_ID "{{ publicSG.group_id }}"
